@@ -1,0 +1,1 @@
+ .section .text,"axG",@progbits,.foo,comdat
